# octarine

./: .conform.yaml  .gitignore  .gitleaksignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .rumdl.toml  .taplo.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  _typos.toml  bacon.toml  biome.json  codecov.yml  cspell.json  deny.toml  dprint.json  justfile  lefthook.yml  osv-scanner.toml  pyproject.toml
crates/octarine/: Cargo.toml
crates/octarine-derive/: Cargo.toml
crates/octarine-derive/src/: lib.rs
crates/octarine-derive/src/config/: generate.rs  mod.rs  parse.rs  validate.rs
crates/octarine-problem/: Cargo.toml
crates/octarine-problem/src/: lib.rs
crates/octarine/benches/: correlation_id.rs  pii_redaction.rs
crates/octarine/docs/: module-quality.md  type-safety-improvements.md
crates/octarine/docs/api/: index.md  naming-conventions.md
crates/octarine/docs/architecture/: builder-pattern.md  layer-architecture.md  metrics-api-visibility.md  module-patterns.md  refactor-plan.md  system-design.md
crates/octarine/docs/architecture/security/: identifiers.md
crates/octarine/docs/observe/: compliance.md
crates/octarine/docs/operations/: audit-logging.md
crates/octarine/docs/patterns/: builder-hierarchy-pattern.md
crates/octarine/docs/runtime/: README.md  observability-integration.md
crates/octarine/docs/security/: index.md  security-guidelines.md
crates/octarine/docs/security/patterns/: index.md  input-architecture.md  overview.md
crates/octarine/examples/: basic_validation.rs  observe_audit.rs  observe_basic.rs  observe_compliance.rs  observe_metrics.rs  observe_siem.rs  observe_tracing.rs
crates/octarine/src/: lib.rs  prelude.rs
crates/octarine/src/anonymize/: engine.rs  mod.rs  operator.rs  shortcuts.rs  types.rs
crates/octarine/src/anonymize/engine/: batch.rs  core.rs  mod.rs
crates/octarine/src/anonymize/operators/: custom.rs  decrypt.rs  encrypt.rs  hash.rs  keyed_config.rs  mask.rs  mod.rs  redact.rs  replace.rs
crates/octarine/src/anonymize/vault/: mod.rs  session.rs  store.rs  types.rs
crates/octarine/src/auth/: mod.rs  timing.rs
crates/octarine/src/auth/csrf/: mod.rs  protection.rs
crates/octarine/src/auth/lockout/: manager.rs  mod.rs  store.rs
crates/octarine/src/auth/mfa/: manager.rs  mod.rs
crates/octarine/src/auth/password/: hibp.rs  mod.rs
crates/octarine/src/auth/remember/: manager.rs  mod.rs  store.rs
crates/octarine/src/auth/reset/: manager.rs  mod.rs  store.rs
crates/octarine/src/auth/session/: manager.rs  mod.rs  store.rs
crates/octarine/src/crypto/: mod.rs
crates/octarine/src/crypto/auth/: hmac.rs  mod.rs
crates/octarine/src/crypto/encryption/: ephemeral.rs  hybrid.rs  keyed.rs  mod.rs  persistent.rs
crates/octarine/src/crypto/keys/: kdf.rs  mod.rs  password.rs  random.rs
crates/octarine/src/crypto/secrets/: buffer.rs  encrypted_storage.rs  env.rs  map.rs  mlock.rs  mod.rs  secret.rs  secure_var.rs  storage.rs  typed.rs
crates/octarine/src/crypto/validation/: builder.rs  mod.rs  shortcuts.rs  types.rs
crates/octarine/src/data/: facade.rs  mod.rs
crates/octarine/src/data/formats/: builder.rs  mod.rs  shortcuts.rs  types.rs
crates/octarine/src/data/network/: builder.rs  mod.rs  shortcuts.rs  types.rs
crates/octarine/src/data/paths/: mod.rs  types.rs
crates/octarine/src/data/text/: builder.rs  mod.rs  shortcuts.rs  types.rs
crates/octarine/src/data/tokens/: mod.rs
crates/octarine/src/http/: error.rs  extractors.rs  mod.rs
crates/octarine/src/http/handlers/: metrics.rs  mod.rs
crates/octarine/src/http/middleware/: auth.rs  context.rs  correlation.rs  metrics.rs  mod.rs  observe.rs  rate_limit.rs  request_id.rs  security.rs
crates/octarine/src/http/presets/: compression.rs  cors.rs  limits.rs  metrics.rs  mod.rs  rate_limit.rs  timeout.rs
crates/octarine/src/identifiers/: facade.rs  mod.rs  shortcuts.rs  tokens.rs
crates/octarine/src/identifiers/builder/: biometric.rs  confidence.rs  correlation.rs  credentials.rs  crypto.rs  database.rs  entropy.rs  environment.rs  financial.rs  generic.rs  government.rs  location.rs  medical.rs  metrics.rs  mod.rs  network.rs  organizational.rs  personal.rs  token.rs
crates/octarine/src/identifiers/shortcuts/: biometric.rs  bulk.rs  correlation.rs  credentials.rs  detection.rs  financial.rs  government.rs  location.rs  medical.rs  mod.rs  network.rs  organizational.rs  personal.rs  sensitive.rs  token.rs
crates/octarine/src/identifiers/types/: biometric.rs  cache.rs  core.rs  correlation.rs  financial.rs  location.rs  mod.rs  network.rs  personal.rs  policies.rs
crates/octarine/src/io/: delete.rs  file.rs  mod.rs  ops.rs  temp.rs
crates/octarine/src/io/formats/: builder.rs  mod.rs  (+2 more)
crates/octarine/src/observe/: aggregate.rs  mod.rs  shortcuts.rs  types.rs
crates/octarine/src/primitives/: mod.rs
crates/octarine/src/runtime/: mod.rs
crates/octarine/src/security/: facade.rs  mod.rs
crates/octarine/src/testing/: mod.rs
crates/octarine/tests/: anonymize_integration.rs  auth_integration.rs  config_derive_integration.rs  crypto_integration.rs  data_integration.rs  http_integration.rs  io_integration.rs  metrics_integration.rs  observe_integration.rs  otel_http_transport.rs  pii_redaction_integration.rs  proptest_security.proptest-regressions  proptest_security.rs
crates/octarine/tests/auth/: lockout.rs  mfa.rs  mod.rs  remember.rs  reset.rs  session.rs
crates/octarine/tests/crypto/: encrypted_storage.rs  hybrid_encryption.rs  kdf_hmac.rs  mod.rs  password_hashing.rs
crates/octarine/tests/http/: context.rs  correlation.rs  error_response.rs  extractors.rs  metrics.rs  mod.rs  presets.rs  request_id.rs
crates/octarine/tests/io/: atomic_writes.rs  magic_detection.rs  mod.rs  secure_file_ops.rs  secure_lifecycle.rs
crates/octarine/tests/observe/: async_dispatch.rs  audit_builders.rs  context_capture.rs  event_flow.rs  metrics_export.rs  mod.rs  pii_pipeline.rs  thresholds.rs  tracing_integration.rs  writer_dispatch.rs  writer_file.rs  writer_memory.rs
(+1132 files in other folders)
