[workspace]
resolver = "2"
members = [
    "crates/octarine",
    "crates/octarine-derive",
]

[workspace.package]
version = "0.3.0-beta.3"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshjhall/octarine"
authors = ["Third Thought"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Internal crates
octarine = { path = "crates/octarine" }
octarine-derive = { path = "crates/octarine-derive" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
