[package]
name = "octarine-problem"
description = "Foundation error type for octarine - Problem enum and Result alias"
version = "0.3.0-beta.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["error", "result", "thiserror", "octarine"]
categories = ["rust-patterns", "no-std"]

[dependencies]
thiserror = { workspace = true }
serde_json = { workspace = true }
xshell = "0.2"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
non_ascii_idents = "deny"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "warn"
unimplemented = "warn"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
clone_on_ref_ptr = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
uninlined_format_args = "allow"
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
