[package]
name = "octarine"
description = "Foundation library for security and observability in Rust - The color of magic"
version = "0.3.0-beta.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["security", "validation", "sanitization", "observability", "audit"]
categories = ["development-tools", "web-programming"]

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
figment = { version = "0.10", features = ["toml", "env", "test"] }

# Date and time
chrono = { workspace = true }

# Pattern matching and text processing
regex = "1.10"
once_cell = "1.19"
lazy_static = "1.4"

# Unicode security and normalization
unicode-normalization = "0.1"
unicode-security = "0.1"

# URL and network validation
url = { workspace = true }
ipnetwork = "0.21"

# Unique identifiers
uuid = { workspace = true }

# Cryptography and encoding
base64 = "0.22"
sha2 = "0.10"
sha3 = "0.11"
keccak = "0.2"
hex = "0.4"
secrecy = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
argon2 = "0.5"

# Async support
async-trait = "0.1"
tokio = { workspace = true }
tokio-util = "0.7.17"

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Optional console output support
console = { version = "0.16.2", optional = true }

# CLI framework (optional)
clap = { workspace = true, optional = true }
indicatif = { version = "0.18", optional = true }

# File and path operations
which = "8.0"

# Shell command safety (for process module)
xshell = "0.2"

# Rate limiting
governor = "0.10.4"
parking_lot = "0.12"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
bytes = "1.10"

# File operations
fd-lock = "4.0"
rand = "0.9"
tempfile = "3.20"
atomic-write-file = "0.3"

# Derive macros (optional)
octarine-derive = { workspace = true, optional = true }

# Compression
flate2 = "1.0"

# Post-quantum cryptography
ml-kem = { version = "0.3.0-rc", features = ["zeroize"] }
rand_core = "0.10"
getrandom = { version = "0.4", features = ["sys_rng"] }

# Classical elliptic curve cryptography
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom", "zeroize"] }

# Database support (optional)
sqlx = { version = "0.8", optional = true, default-features = false, features = [
    "runtime-tokio",
    "chrono",
    "uuid",
] }

# OpenTelemetry (optional)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true, features = ["grpc-tonic", "trace"] }

# HTTP server middleware (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true, features = ["util"] }
tower-http = { version = "0.6.8", optional = true, features = [
    "request-id",
    "util",
    "cors",
    "compression-full",
    "decompression-full",
    "trace",
    "timeout",
    "limit",
] }
tower_governor = { version = "0.8", optional = true, default-features = false, features = ["axum", "tracing"] }
http = { version = "1.2", optional = true }
http-body-util = { version = "0.1", optional = true }

# Authentication (optional)
jsonwebtoken = { version = "10.2", optional = true, features = ["rust_crypto"] }
zxcvbn = { version = "3", optional = true }
totp-rs = { version = "5", optional = true, features = ["gen_secret", "otpauth"] }
sha1 = { version = "0.11", optional = true }

# GraphQL parsing (optional, for query validation)
graphql-parser = { version = "0.4", optional = true }

# Structured data formats (optional, for formats module)
quick-xml = { version = "0.39", optional = true }
serde_yaml = { version = "0.9", optional = true }

# Crypto input validation (optional)
pem = { version = "3.0", optional = true }
x509-parser = { version = "0.18", optional = true }
ssh-key = { version = "0.6", optional = true }
pkcs8 = { version = "0.10", optional = true }

# Testing infrastructure (optional)
proptest = { version = "1.4", optional = true }
rstest = { version = "0.26", optional = true }
assert_fs = { version = "1.1", optional = true }
predicates = { version = "3.1", optional = true }
# testcontainers removed - use stibbons for container-based testing instead
wiremock = { version = "0.6", optional = true }
assert_cmd = { version = "2.0", optional = true }
shell-escape = { version = "0.1", optional = true }

# System info
hostname = "0.4"
local-ip-address = "0.6.8"

# Unix permissions and testing tools
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs", "user"] }
libc = "0.2"
rexpect = { version = "0.6", optional = true }

[features]
default = ["console", "full", "derive"]
console = ["dep:console"]
cli = ["dep:clap", "dep:indicatif", "console"]
full = ["observe", "security", "cli"]
derive = ["dep:octarine-derive"]
observe = []
security = []
database = ["dep:graphql-parser"]
formats = ["dep:quick-xml", "dep:serde_yaml"]
postgres = ["database", "dep:sqlx", "sqlx?/postgres"]
sqlite = ["database", "dep:sqlx", "sqlx?/sqlite"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
http = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tower_governor",
    "dep:http",
    "dep:http-body-util",
]
auth = ["http", "dep:jsonwebtoken", "dep:zxcvbn"]
auth-hibp = ["auth", "dep:sha1"]
auth-totp = ["auth", "dep:totp-rs"]
auth-full = ["auth-hibp", "auth-totp"]
crypto-validation = ["dep:pem", "dep:x509-parser", "dep:ssh-key", "dep:pkcs8"]
shell = []
testing = [
    "dep:proptest",
    "dep:rstest",
    "dep:assert_fs",
    "dep:predicates",
    "dep:wiremock",
    "dep:assert_cmd",
    "dep:rexpect",
    "dep:shell-escape",
]

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tempfile = "3.20"
criterion = "0.8"
proptest = "1.4"
proptest-arbitrary-interop = "0.1"
arbitrary = { version = "1.3", features = ["derive"] }
rstest = "0.26"
assert_fs = "1.1"
predicates = "3.1"
pretty_assertions = "1.4"
serial_test = "3.2"
test-case = "3.3"
wiremock = "0.6"
fake = { version = "4.4", features = ["derive"] }
assert_cmd = "2.0"
rexpect = "0.6"

[[bench]]
name = "pii_redaction"
harness = false

[[test]]
name = "metrics_integration"
required-features = ["testing"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
non_ascii_idents = "deny"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "warn"
unimplemented = "warn"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
clone_on_ref_ptr = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
uninlined_format_args = "allow"
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
